# minerva-ai

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOY.md  DEPLOYAWS.MD  Dockerfile  RAILWAY.md  README.md  docker-compose.yml  patch_main.py  pyproject.toml  railway.toml  requirements.txt  rugcheck_sample.json  test_bybit.py  wallets.db-journal
dashboard/: package-lock.json
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/services/: api.ts
docs/: ARSITECTURE.md  hermes_config_snippet.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ArcReactor.tsx  BootSequence.tsx  ChatFeed.tsx  ChatInput.tsx  HoloContainer.tsx  HudFooter.tsx  HudHeader.tsx  Sidebar.tsx
frontend/src/hooks/: useSpeechSynthesis.ts  useVoiceInput.ts  useWebSocket.ts
frontend/src/pages/: Assistant.tsx  Configuration.tsx  Dashboard.tsx  Positions.tsx
hermes-plugin/minerva_bridge/: plugin.yaml
hermes-plugin/minerva_bridge/scripts/: analyze.py  health_check.py  market_overview.py  portfolio.py
migrations/: 001_initial.sql  002_backtest_results.sql
scripts/: init_db.py
src/: api.rs  db.rs  main.rs  scraper.rs  telegram.rs  ws.rs
src/minerva/: __init__.py  config.py  logger.py  main.py
src/minerva/backtest/: __init__.py  cli.py  paper_trader.py  runner.py
src/minerva/brain/: __init__.py  agent.py  decision.py  fast_path.py  prompts.py  rag.py  slow_path.py
src/minerva/bridge/: __init__.py  handlers.py  mcp_server.py  tools.py  voice.py  ws_relay.py
src/minerva/execution/: __init__.py  exchange_gateway.py  oms.py  risk_engine.py  smart_router.py
src/minerva/ingestion/: __init__.py  aggregator.py  market_feed.py  news_feed.py  onchain_feed.py  social_feed.py
src/minerva/memory/: __init__.py  redis_store.py  supabase_store.py  vector_store.py
tests/: __init__.py  test_oms.py  test_risk_engine.py  test_signals.py
(+14 files in other folders)
