[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minerva-ai"
version = "1.0.0"
description = "AI Crypto Trading Agent — Production-ready autonomous trading system"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "ccxt>=4.4.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis[hiredis]>=5.2.0",
    "supabase>=2.10.0",
    "pinecone-client>=5.0.0",
    "openai>=1.55.0",
    "prometheus-client>=0.21.0",
    "python-telegram-bot>=21.7",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "onnxruntime>=1.19.0",
    "websockets>=13.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
minerva = "minerva.main:main"
minerva-backtest = "minerva.backtest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
